# uds2sovd-proxy

./: CODESTYLE.md  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  deny.toml
.github/workflows/: build.yml  pr-checks.yml  pre-commit.yaml
doip-server-poc/: Cargo.toml  README.md  test_doip.py
doip-server-poc/flowchartw/: flowchart.md
doip-server-poc/src/: main.rs
src/: error.rs  lib.rs
src/doip/: alive_check.rs  codec.rs  diagnostic_message.rs  header.rs  header_parser.rs  hearder_parser.rs  mod.rs  payload.rs  routing_activation.rs  vehicle_id.rs
src/server/: config.rs  mod.rs  session.rs
src/uds/: handler.rs  mod.rs
